--- a/00-premier-prog-js/index.html
+++ b/00-premier-prog-js/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <script>
     <meta charset="UTF-8">
     <title>premier JS</title>
-    <style>
 
-    </style>
     <script src="monScript.js"</script>
 
 </head>
