--- a/exercice/exercice.html
+++ b/exercice/exercice.html
@@ -9,8 +9,23 @@
 Exercice 1.1
 Ecrivez un algorithme qui permet d'échanger la valeur contenue dans deux variables. Par exemple, si A vaut 5 et B 13 au
 début de l'algorithme, faites-en sorte que A soit égal à 13 et B à 5 à la fin de l'algorithme.
-<br>
+<br><br>
 Exercice 1.3
 Ecrire un programme qui demande un nombre à l’utilisateur, puis qui calcule et affiche le carré de ce nombre.
+<br><br>
+Exercice 1.6
+Lire 2 nombres a et b. Calculer et afficher leur moyenne.
+<br><br>
+Exercice 1.7
+Lire le rayon R d'une sphère. Calculer et afficher son aire = 4πR² et son volume = 43 πR3
+<br><br>
+Exercice 2.1
+Ecrire un algorithme qui demande deux nombres à l’utilisateur et l’informe ensuite si leur produit est négatif ou
+positif (on laisse de côté le cas où le produit est nul). Attention toutefois : on ne doit pas calculer le produit des
+deux nombres.
+<br><br>
+Exercice 2.2
+Ecrire un programme qui lit le prix HT d’un article, le nombre d’articles et le taux de TVA, et qui fournit le prix
+total TTC correspondant. Faire en sorte que des libellés apparaissent clairement.
 </body>
 </html>
