--- a/exercice/partie3.html
+++ b/exercice/partie3.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>evaluation</title>
-    <script src="partie3.js"></script>
+    <script src="partie4.js"></script>
 </head>
 <body>
-Lorem ipsum dolor sit amet consectetur adipiscing.
+KGGHKLxsssssssssssssssss
 </body>
 </html>
