--- a/10-les-objets-du-BOM/05-evens/index.html
+++ b/10-les-objets-du-BOM/05-evens/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="main.js" defer></script>
 </head>
 <body>
-
+<section>
+    <p> Cliquez-moi svp!</p>
+    <p> Survolez-moi!</p>
+</section>
 </body>
 </html>
