--- a/exercice/partie3.html
+++ b/exercice/partie3.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>evaluation</title>
-    <script src="partie4.js"></script>
+    <script src="partie5.js"></script>
 </head>
 <body>
-KGGHKLxsssssssssssssssss
+<!--Entrez un nombre : <input id="myInput">-->
+<!--<button onclick="isEven()">Vérifier</button>-->
+
 </body>
 </html>
