--- a/exercice/partie3.html
+++ b/exercice/partie3.html
@@ -6,6 +6,7 @@
     <script src="partie5.js"></script>
 </head>
 <body>
+"Il est certain que JavaScript est un langage simple à apprendre, mais il n'en est pas pour autant rudimentaire... "
 
 </body>
 </html>
